--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,33 +1,37 @@
 .container {
   min-height: 100vh;
   min-width: 500px;
+  width: 80%;
+  max-width: 900px;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: #e9e9e9;
+  margin: 0 auto;
 }
 
 .intro {
+  width: 100%;
   background: white;
   padding: 1rem;
-  width: 840px;
+  margin-bottom: 1rem;
 }
 
 .intro a {
-  
-    color: blue;
+  color: blue;
   font-weight: 500;
 }
 
 .paletteList {
+  width: 100%;
   background: white;
   padding: 1rem;
 }
+
 .paletteItem {
-  min-width: 800px;
-  width: 80%;
+  width: 100%;
   padding: .5rem 0;
 }
 
@@ -39,7 +43,7 @@
 }
 
 .converter {
-  width: 800px;
+  width: 100%;
   margin-top: 1rem;
   border-top: 1px solid #ddd;
   padding-top: 1rem;
