--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -45,6 +45,7 @@
 .converter {
     width: 100%;
     margin-top: 1rem;
+    margin-bottom: 2rem;
     border-top: 1px solid #ddd;
     padding-top: 1rem;
     background: white;
