--- a/styles/Wheel.module.css
+++ b/styles/Wheel.module.css
@@ -38,3 +38,67 @@
     background-color: black;
     border-radius: 50%;
 }
+
+.colorArea {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.colorItem {
+    width: 90%;
+    height: 30px;
+    padding: 5px 10px;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 10px;
+    cursor: pointer;
+    box-sizing: content-box;
+}
+
+.colorItem input {
+    height: 20px;
+    margin-right: 20px;
+}
+
+.colorItemList {
+    width: 100%;
+    padding-right: 20px;
+}
+
+.colorBox {
+    border-radius: 3px;
+    height: 20px;
+    width: 80px;
+    margin-right: 10px;
+}
+.colorHex {
+    width: 100px;
+    color: #555;
+}
+
+.colorInput span {
+    margin-right: 10px;
+}
+
+.addColor {
+    padding: 5px 10px;
+    width: 300px;
+    background-color: lightgreen;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.spinButton {
+    background-color: white;
+    border: 2px solid #aaa;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px 0 20px 0;
+    cursor: pointer;
+}
