--- a/styles/Wheel.module.css
+++ b/styles/Wheel.module.css
@@ -102,3 +102,11 @@
     margin: 5px 0 20px 0;
     cursor: pointer;
 }
+
+.converterResult {
+    white-space: pre-line;
+    padding: 1rem;
+    margin-left: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
