--- a/styles/Wheel.module.css
+++ b/styles/Wheel.module.css
@@ -1,14 +1,13 @@
 .container {
-    min-height: 100vh;
     min-width: 500px;
     width: 80%;
     max-width: 900px;
-    padding: 0 0.5rem;
+    padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #e9e9e9;
+    background: white;
     margin: 0 auto;
 }
 
@@ -20,6 +19,7 @@
     align-items: center;
     justify-content: center;
     animation: rotation 4s infinite linear;
+    margin-bottom: 1rem;
 }
 
 @keyframes rotation {
@@ -43,6 +43,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 2rem 0;
     width: 100%;
 }
 
@@ -54,6 +55,7 @@
     border-radius: 5px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     background-color: white;
     margin-bottom: 10px;
@@ -61,9 +63,18 @@
     box-sizing: content-box;
 }
 
+.colorItemProperties {
+    display: flex;
+    flex-direction: row;
+}
+
 .colorItem input {
     height: 20px;
     margin-right: 20px;
+}
+
+.colorItemButton {
+    margin-left: 0.5rem;
 }
 
 .colorItemList {
@@ -109,4 +120,25 @@
     margin-left: 1rem;
     border: 1px solid #ddd;
     border-radius: 10px;
+    min-width: 200px;
+}
+
+.wheelCSS {
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+
+.multipleButton {
+    margin: 0px 5px 10px 5px;
+    padding: 5px 10px;
+}
+
+.wheelCodes {
+    width: 100%;
+    min-width: 500px;
+    max-width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
