--- a/styles/Wheel.module.css
+++ b/styles/Wheel.module.css
@@ -164,3 +164,9 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.library {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
